-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2011-08-26	pwessel
	GMT 5.0.0b finalized and released.
-----------------------------------------------------------------------------------------

2011-08-26	remko
	* pslib.c:		Made PSL_comment and PSL_command functions instead of macros
				for all platforms
	* gmt_init.c:		Made GMT_message and GMT_report functions instead of macros
				for all platforms

2011-08-25	remko
	* configure.ac:		Fixed bug in finding pkg-config

2011-08-25	pwessel
	* grdtrack_func.c:	Added -N to NOT skip points outside grid domain.

2011-08-24	jluis
	* gmtapi_util.c:	A bit of voodoo programming to make vanish some tests crash on Windows

2011-08-24	pwessel, remko
	* gmtswitch:		Added man page in src, and script moved to src.

2011-08-24	remko
	* gmt_version.c:	Introduced new function GMT_version() to generate version number.
	* *_tests.sh:		Now using graphicsmagick instead of imagemagick for compare.
	
2011-08-23	pwessel
	* guru/install_gmt.sh:	Now offers option to set PCRE libs or disable.
	* gmt_init.c:		New parameter GMT_TRIANGULATE which selects the triangulation
				algorithm to use (Watson or Shewchuk). The latter is only
				available if --enable-triangle was used during configuration.
				
2011-08-20	pwessel
	* psrose_func.c:	The -C with no file still looked for a file.
				do_fill was not initialized, could case black fill.
				Baseframe was not drawn when -B was set.
	* test/psrose:		Added test script for psrose

2011-08-17	jluis
	* gmtconvert_func.c:	Added (optional) PCRE support on Windows.
	* gmtinstall.bat:			" "

2011-08-11	pwessel
	* gmtmath_func.c:	The EXCH should just swap data set pointers.
	* grdblend_func.c:	Pass -R to grdsample/grdreformat to only deal with smallest region.